--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
+<div class="topnav">
+	<nav>
+		<ul>
+			<li><a class="active"href="about-me.html">About me</a></li>
+		</ul>
+	</nav>
+</div>
 
 <h1>PHYS_S-12-test</h1>
-<p> <strong>Sofia<strong> Rivera Recart</p>
+<p>Sofia Rivera Recart</p>
+
+
 
 </body>
 </html>
