--- a/about-me.html
+++ b/about-me.html
@@ -4,9 +4,17 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
+	<nav>
+	<div class="topnav">
+		<ul>
+			<li><a class="active" href="index.html">Home</a></li>
+			<li><a class="active" href="about-me.html">About me</a></li>
+		</ul>
+	</div>	
+</nav>
 
-<h2>Who am I?</h1>
-<p1>info</p>
+<h2>Who am I?</h2>
+<p>info</p>
 
 </body>
 </html>
