--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
-<div class="topnav">
-	<nav>
+<nav>
+	<div class="topnav">
 		<ul>
-			<li><a class="active"href="about-me.html">About me</a></li>
+			<li><a class="active" href="index.html">Home</a></li>
+			<li><a class="active" href="about-me.html">About me</a></li>
 		</ul>
-	</nav>
-</div>
+	</div>	
+</nav>
 
-<h1>PHYS_S-12-test</h1>
-<p>Sofia Rivera Recart</p>
+
+<h1>PHYS_S-12t</h1>
+<h3>Sofia Rivera Recart</h3s>
 
 
 
