--- a/about-me.html
+++ b/about-me.html
@@ -9,12 +9,13 @@
 		<ul>
 			<li><a class="active" href="index.html">Home</a></li>
 			<li><a class="active" href="about-me.html">About me</a></li>
+			<li><a class="active" href="Final_projects.html">Final Project</a></li>
 		</ul>
 	</div>	
 </nav>
 
-<h2>Who am I?</h2>
-<p>info</p>
+<h2>Who am I? 73 Questions</h2>
+<p><strong>Favorite place to be?</strong></p>
 
 </body>
 </html>
