--- a/Final_projects.html
+++ b/Final_projects.html
@@ -13,5 +13,9 @@
 		</ul>
 	</div>	
 </nav>
+<h1>Project idea</h1>
+<p><strong>Plan A:</strong><br> Smart Planter --> A planter that could control the different variables the plant suffers. Also, remember you to water them.
+	<br><strong>Plan B:</strong><br> Personal Assistant --> A small robot that could do simple tasks such as: turn off the tv, turn on the lights, see if the cats have food, find simple things, etc.
+</p>
 </body>
 </html>
