--- a/about-me.html
+++ b/about-me.html
@@ -35,6 +35,6 @@ p.big {
 <br><strong>What’s for dinner today?</strong>
 <br><strong>What can I see from my window?</strong> My neighbour working
 <br><strong>Last show I’ve binge watched?</strong> The King
-<br><strong>If you could die your hair, what color would it be?</strong> I would die it purple or go back to the pink.
+<br><strong>If you could dye your hair, what color would it be?</strong> I would dye it purple or go back to the pink.
 </p>
 </html>
