--- a/about-me.html
+++ b/about-me.html
@@ -18,23 +18,23 @@ p.big {
 		</ul>
 	</div>	
 </nav>
-
 <h2>Who am I? 15 Questions</h2>
-<p>
-<br><strong>How old am I?</strong> 17 years old
-<br><strong>Favorite place to be?</strong> The Warf in Washington DC. I lived there in 2018-2019 and that part of the city was my favorite place to go for a walk or read a book.
-<br><strong>Something I can never live without?</strong> My glasses
-<br><strong>Hobbies that I’ll never give up?</strong> Aerial silks
-<br><strong>Favorite food?</strong> Korean bbq
-<br><strong>Books reading these days?</strong> Red, white and royal blue
-<br><strong>My favorite word in English?</strong> Bubble, I just love how it sounds
-<br><strong>My favorite word in Spanish?</strong>
-<br><strong>Favourite Cusine?</strong> Mexican, Korean and Japanese
-<br><strong>What am I horrible at?</strong> Sports
-<br><strong>Any pets?</strong> Yes, two cats Aurora and Calila and one dog Zeus
-<br><strong>What’s for dinner today?</strong>
-<br><strong>What can I see from my window?</strong> My neighbour working
-<br><strong>Last show I’ve binge watched?</strong> The King
-<br><strong>If you could dye your hair, what color would it be?</strong> I would dye it purple or go back to the pink.
-</p>
+<div class="paragraph">
+	<p><strong>How old am I?</strong> 17 years old
+	<br><strong>Favorite place to be?</strong> The Warf in Washington DC. I lived there in 2018-2019 and that part of the city was my favorite place to go for a walk or read a book.
+	<br><strong>Something I can never live without?</strong> My glasses
+	<br><strong>Hobbies that I’ll never give up?</strong> Aerial silks
+	<br><strong>Favorite food?</strong> Korean bbq
+	<br><strong>Books reading these days?</strong> Red, white and royal blue
+	<br><strong>My favorite word in English?</strong> Bubble, I just love how it sounds
+	<br><strong>My favorite word in Spanish?</strong>
+	<br><strong>Favourite Cusine?</strong> Mexican, Korean and Japanese
+	<br><strong>What am I horrible at?</strong> Sports
+	<br><strong>Any pets?</strong> Yes, two cats Aurora and Calila and one dog Zeus
+	<br><strong>What’s for dinner today?</strong>
+	<br><strong>What can I see from my window?</strong> My neighbour working
+	<br><strong>Last show I’ve binge watched?</strong> The King
+	<br><strong>If you could dye your hair, what color would it be?</strong> I would dye it purple or go back to the pink.
+</p></div>
+
 </html>
