--- a/Final_projects.html
+++ b/Final_projects.html
@@ -14,8 +14,11 @@
 	</div>	
 </nav>
 <h1>Project idea</h1>
+<div class="paragraph">
 <p><strong>Plan A:</strong><br> Smart Planter --> A planter that could control the different variables the plant suffers. Also, remember you to water them.
 	<br><strong>Plan B:</strong><br> Personal Assistant --> A small robot that could do simple tasks such as: turn off the tv, turn on the lights, see if the cats have food, find simple things, etc.
 </p>
+</div>
+
 </body>
 </html>
