--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 	</div>	
 </nav>
 
-
-<h1>PHYS_S-12t</h1>
-<h3>Sofia Rivera Recart</h3>
+<div class="index">
+	<h1>PHYS_S-12</h1>
+	<h3>Sofia Rivera Recart</h3>
+</div>
 
 
 
