--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
-<nav>
-	<div class="topnav">
-		<ul>
-			<li><a class="active" href="index.html">Home</a></li>
-			<li><a class="active" href="about-me.html">About me</a></li>
-			<li><a class="active" href="Final_projects.html">Final Project</a></li>
-		</ul>
-	</div>	
-</nav>
 
 <div class="index">
 	<h1>PHYS_S-12</h1>
 	<h3>Sofia Rivera Recart</h3>
 </div>
-
+<div class="i-b">
+	<button class="a-m"><a class="active" href="about-me.html">About me</a></button>
+	<button class="a-m"><a class="active" href="Final_projects.html">Final project</a></button>
+</div>
 
 
 </body>
