--- a/about-me.html
+++ b/about-me.html
@@ -29,7 +29,7 @@ p.big {
 	<br><strong>Favorite food?</strong> Korean bbq
 	<br><strong>Books reading these days?</strong> Red, white and royal blue
 	<br><strong>My favorite word in English?</strong> Bubble, I just love how it sounds
-	<br><strong>My favorite word in Spanish?</strong>
+	<br><strong>My favorite word in Spanish?</strong> Al tiro, it something that just Chilean people said. It translates as to the shot, but we use it to say that we are going to do something right now.
 	<br><strong>Favourite Cusine?</strong> Mexican, Korean and Japanese
 	<br><strong>What am I horrible at?</strong> Sports
 	<br><strong>Any pets?</strong> Yes, two cats Aurora and Calila and one dog Zeus
