--- a/Final_projects.html
+++ b/Final_projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<link rel="stylesheet" type="text/css" href="mystyle.css">x
 </head>
 <body>
 <nav>
@@ -10,13 +10,14 @@
 			<li><a class="active" href="index.html">Home</a></li>
 			<li><a class="active" href="about-me.html">About me</a></li>
 			<li><a class="active" href="Final_projects.html">Final Project</a></li>
+			<li><a class="active" href="Assignments.html">Assignments</a></li>
 		</ul>
 	</div>	
 </nav>
 <h1>Project idea</h1>
 <div class="paragraph">
 <p><strong>Plan A:</strong><br> Smart Planter --> A planter that could control the different variables the plant suffers. The perfect environment for a plant to grow. I want to create a capsule that could protect the plant at the same time it waters it and has led lights. 
-	
+
 	<!--<br><strong>Plan B:</strong><br> Personal Assistant -> A small robot that could do simple tasks such as: turn off the tv, turn on the lights, see if the cats have food, find simple things, etc. -->
 </p>
 </div>
