--- a/about-me.html
+++ b/about-me.html
@@ -15,6 +15,7 @@ p.big {
 			<li><a class="active" href="index.html">Home</a></li>
 			<li><a class="active" href="about-me.html">About me</a></li>
 			<li><a class="active" href="Final_projects.html">Final Project</a></li>
+			<li><a class="active" href="Assignments.html">Assignments</a></li>
 		</ul>
 	</div>	
 </nav>
