--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 	<button class="a-m"><a class="active" href="about-me.html">About me</a></button>
 	<button class="a-m"><a class="active" href="Final_projects.html">Final project</a></button>
 </div>
-
+<div class="i-a">
+	<button class="a-m"><a class="active" href="Assignments.html">Assignments</a></button>
+</div>
 
 </body>
 </html>
