--- a/assignments.html
+++ b/assignments.html
@@ -19,5 +19,28 @@ p.big {
 		</ul>
 	</div>	
 </nav>
+<table style= "width:100%">
+	<tr>
+    <th class="asb"><a class="active" href="class1.html">Class 1</a></th>
+    <th class="asb"><a class="active" href="class2.html">Class 2</a></th>
+    <th class="asb"><a class="active" href="">Class 3</a></th>
+    <tr>
+    	</tr>
+    <th class="asb"><a class="active" href="">Class 4</a></th>
+    <th class="asb"><a class="active" href="">Class 5</a></th>
+    <th class="asb"><a class="active" href="">Class 6</a></th>
+    </tr>
+    <tr>
+    <th class="asb"><a class="active" href="">Class 7</a></th>
+    <th class="asb"><a class="active" href="">Class 8</a></th>
+    <th class="asb"><a class="active" href="">Class 9</a></th>
+    </tr>
+    <tr>
+    <th class="asb"><a class="active" href="">Class 10</a></th>
+    <th class="asb"><a class="active" href="">Class 11</a></th>
+    <th class="asb"><a class="active" href="">Class 12</a></th>
+    </tr>
+</table>
+
 </body>
 </html>
