--- a/class1.html
+++ b/class1.html
@@ -14,6 +14,11 @@
 		</ul>
 	</div>	
 </nav>
+<h1>Project idea</h1>
+<div class="paragraph">
+<p><strong>Plan:</strong><br> Personal Assistant -> A small robot that could do simple tasks such as: turn off the tv, turn on the lights, see if the cats have food, find small things, etc.
+</p>
+</div>
 
 </body>
 </html>
