--- a/class2.html
+++ b/class2.html
@@ -14,6 +14,13 @@
 		</ul>
 	</div>	
 </nav>
-
+<h1>3D model in Fusion 360</h1>
+<h1>Project idea</h1>
+<div class="paragraph">
+<p>><strong>Screw</strong><br> 
+<p><br><strong>Micro servo motor</strong><br> 
+<p><br><strong>?</strong><br> 
+</p>
+</div>
 </body>
 </html>
