--- a/class2.html
+++ b/class2.html
@@ -17,9 +17,13 @@
 <h1>3D model in Fusion 360</h1>
 <h1>Project idea</h1>
 <div class="paragraph">
-<p>><strong>Screw</strong><br> 
-<p><br><strong>Micro servo motor</strong><br> 
-<p><br><strong>?</strong><br> 
+<p><strong>Screw</strong><br> 
+	<img src="tornillo v6.png" alt="screw" style="width:100%" >
+<br><strong>Micro servo motor</strong><br> 
+	<img src="microservo v2.png" alt="motor" style="width:100%" >
+<br><strong>3D print</strong><br> 
+	<img src="plane3dprint v1.png" alt="3dprint" style="width:100%" >
+In this assignment I learned to use
 </p>
 </div>
 </body>
