--- a/class2.html
+++ b/class2.html
@@ -23,7 +23,7 @@
 	<img src="microservo v2.png" alt="motor" style="width:100%" >
 <br><strong>3D print</strong><br> 
 	<img src="plane3dprint v1.png" alt="3dprint" style="width:100%" >
-In this assignment I learned to use
+	This weekend I learned to use the different tools that Fusion 360 offers. I started doing the screw because I find it the most detailed. I don't regret doing that because when I finished, I had already spent so much time in it that I knew where almost everything was. The other thing that I learn is that personally, for me, it is more comfortable to build each part of the component separately and then assemble them. In this way, I can pay attention to the details of the small pieces. On the other hand, I know I need to improve my abilities in preciseness using the tools the program offers, especially when the metric is variable.
 </p>
 </div>
 </body>
