--- a/Final_projects.html
+++ b/Final_projects.html
@@ -10,7 +10,7 @@
 			<li><a class="active" href="index.html">Home</a></li>
 			<li><a class="active" href="about-me.html">About me</a></li>
 			<li><a class="active" href="Final_projects.html">Final Project</a></li>
-			<li><a class="active" href="Assignments.html">Assignments</a></li>
+			<li><a class="active" href="assignments.html">Assignments</a></li>
 		</ul>
 	</div>	
 </nav>
