--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<button class="a-m"><a class="active" href="Final_projects.html">Final project</a></button>
 </div>
 <div class="i-a">
-	<button class="a-m"><a class="active" href="Assignments.html">Assignments</a></button>
+	<button class="a-m"><a class="active" href="assignments.html">Assignments</a></button>
 </div>
 
 </body>
