--- a/class2.html
+++ b/class2.html
@@ -18,7 +18,7 @@
 <h1>Project idea</h1>
 <div class="paragraph">
 <p><strong>Screw</strong><br> 
-	I had a lot of problems with the screw because I´m perfecctionist. So I wanted see every detail. I build the base first doing the large cilinder the small cillinder and the hole. Then I used thread tool but before discovering I tried doing each line with the excrute. This last tool I used to create a third cilinder with the circular pattern to do the small lines.
+	I had a lot of problems with the screw because I´m perfecctionist. So I wanted to see every detail. I build the base first doing the large cilinder the small cillinder and the hole. Then I used thread tool but before discovering I tried doing each line with the excrute. This last tool I used to create a third cilinder with the circular pattern to do the small lines.
 	<img src="tornillo v6.png" alt="screw" style="width:100%" >
 <br><strong>Micro servo motor</strong><br> 
 	With this piece I just wanted to play arround with moving thing with precision. So I divided in 5 parts, build them and then attachment together.
