--- a/About-me/about-me.html
+++ b/About-me/about-me.html
@@ -6,15 +6,16 @@ p.big {
   line-height: 1.2;
 }
 </style>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="../mystyle.css">
 </head>
 <body>
 	<nav>
 	<div class="topnav">
 		<ul>
-			<li><a class="active" href="index.html">Home</a></li>
-			<li><a class="active" href="about-me.html">About me</a></li>
-			<li><a class="active" href="Final_projects.html">Final Project</a></li>
+			<li><a class="active" href="../index.html">Home</a></li>
+			<li><a class="active" href="../About-me/about-me.html">About me</a></li>
+			<li><a class="active" href="../Final-project/Final_projects.html">Final Project</a></li>
+			<li><a class="active" href="../assignments.html">Assignments</a></li>
 		</ul>
 	</div>	
 </nav>
@@ -29,7 +30,7 @@ p.big {
 	<br><strong>Favorite food?</strong> Korean bbq
 	<br><strong>Books reading these days?</strong> Red, white and royal blue
 	<br><strong>My favorite word in English?</strong> Bubble, I just love how it sounds
-	<br><strong>My favorite word in Spanish?</strong>
+	<br><strong>My favorite word in Spanish?</strong> Al tiro, it something that just Chilean people said. It translates as to the shot, but we use it to say that we are going to do something right now.
 	<br><strong>Favourite Cusine?</strong> Mexican, Korean and Japanese
 	<br><strong>What am I horrible at?</strong> Sports
 	<br><strong>Any pets?</strong> Yes, two cats Aurora and Calila and one dog Zeus
@@ -38,6 +39,7 @@ p.big {
 	<br><strong>Last show I’ve binge watched?</strong> The King
 	<br><strong>If you could dye your hair, what color would it be?</strong> I would dye it purple or go back to the pink.
 	<br><strong>Finally a picture of me</strong></p>
+	<img src="me1.jpeg" alt="myself" style="width:100%">
 </div>
 
 </html>
