--- a/assignments.html
+++ b/assignments.html
@@ -21,9 +21,9 @@ p.big {
 </nav>
 <table style= "width:100%">
 	<tr>
-    <th class="asb"><a class="active" href="class1.html">Class 1</a></th>
-    <th class="asb"><a class="active" href="class2.html">Class 2</a></th>
-    <th class="asb"><a class="active" href="">Class 3</a></th>
+    <th class="asb"><a class="active" href="class1/class1.html">Class 1</a></th>
+    <th class="asb"><a class="active" href="class2/class2.html">Class 2</a></th>
+    <th class="asb"><a class="active" href="class3/class3.html">Class 3</a></th>
     <tr>
     	</tr>
     <th class="asb"><a class="active" href="">Class 4</a></th>
