--- a/class1/class1.html
+++ b/class1/class1.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">x
+	<link rel="stylesheet" type="text/css" href="../mystyle.css">
 </head>
 <body>
 <nav>
 	<div class="topnav">
 		<ul>
-			<li><a class="active" href="index.html">Home</a></li>
-			<li><a class="active" href="about-me.html">About me</a></li>
-			<li><a class="active" href="Final_projects.html">Final Project</a></li>
-			<li><a class="active" href="Assignments.html">Assignments</a></li>
+			<li><a class="active" href="../index.html">Home</a></li>
+			<li><a class="active" href="../About-me/about-me.html">About me</a></li>
+			<li><a class="active" href="../Final-project/Final_projects.html">Final Project</a></li>
+			<li><a class="active" href="../assignments.html">Assignments</a></li>
 		</ul>
 	</div>	
 </nav>
