--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<h3>Sofia Rivera Recart</h3>
 </div>
 <div class="i-b">
-	<button class="a-m"><a class="active" href="about-me.html">About me</a></button>
-	<button class="a-m"><a class="active" href="Final_projects.html">Final project</a></button>
+	<button class="a-m"><a class="active" href="About-me/about-me.html">About me</a></button>
+	<button class="a-m"><a class="active" href="Final-project/Final_projects.html">Final project</a></button>
 </div>
 <div class="i-a">
 	<button class="a-m"><a class="active" href="assignments.html">Assignments</a></button>
