--- a/class3/class3.html
+++ b/class3/class3.html
@@ -16,6 +16,22 @@
 </nav>
 <h1>Circuit</h1>
 <div class="paragraph">
-	<p></p>
+	<p>
+	I had to be honest and said that I built the real circuit first. I played around Tinkercad, and I didn't like it. I feel it was to slow for me. However, after I finished my circuit, I copied it to Tinkercad because I find it useful to show other people what I'm doing more clearly. I used a DC motor (a CC one in the Tinkercad), a 1K resistor, and a led. Well, and all the other basics materials. <br>
+	What I learned so far is to recognize the cathode and the anode because I committed that mistake at least ten times. I understand how electricity ”moves” around the breadboard. How to use a potentiometer. How to not connect the wires and how to strip them. Because, despite my experience with electronics and Arduino, I had always used male to male jumper wires, so I had never striped one.<br><br>
+	<strong>Tinkercad</strong><br><br>
+	<img src="simoff.png" alt="Tinkercad" style="width:45%"> <img src="simon.png" alt="Tinkercad2" style="width:45%"><br><br>
+	<video width="90%" controls>
+ 	 <source src="videos.mov" type="video/mp4">
+	</video><br><br>
+	<strong>Real circuit</strong> (I add a bunch of photos of the process)<br><br>
+	<img src="c1.png" alt="c1" style="width:45%"> <img src="c2.png" alt="c2" style="width:45%">
+	<video heigth="100%" controls>
+ 	 <source src="v1.mov" type="video/mp4">
+	</video>
+	<img src="c3.png" alt="c3" style="width:45%"> <img src="c4.png" alt="c4" style="width:45%">
+	<img src="c5.png" alt="c5" style="width:45%"> <img src="c6.png" alt="c6" style="width:45%">
+	<img src="c7.png" alt="c7" style="width:45%">
+	</p>
 </body>
 </html>
