--- a/class3/class3.html
+++ b/class3/class3.html
@@ -20,18 +20,26 @@
 	I had to be honest and said that I built the real circuit first. I played around Tinkercad, and I didn't like it. I feel it was to slow for me. However, after I finished my circuit, I copied it to Tinkercad because I find it useful to show other people what I'm doing more clearly. I used a DC motor (a CC one in the Tinkercad), a 1K resistor, and a led. Well, and all the other basics materials. <br>
 	What I learned so far is to recognize the cathode and the anode because I committed that mistake at least ten times. I understand how electricity ”moves” around the breadboard. How to use a potentiometer. How to not connect the wires and how to strip them. Because, despite my experience with electronics and Arduino, I had always used male to male jumper wires, so I had never striped one.<br><br>
 	<strong>Tinkercad</strong><br><br>
-	<img src="simoff.png" alt="Tinkercad" style="width:45%"> <img src="simon.png" alt="Tinkercad2" style="width:45%"><br><br>
-	<video width="90%" controls>
- 	 <source src="videos.mov" type="video/mp4">
-	</video><br><br>
+		<img src="simoff.png" alt="Tinkercad" style="width:45%"> <img src="simon.png" alt="Tinkercad2" style="width:45%"><br><br>
+		<video width="90%" controls>
+ 			 <source src="videos.mov" type="video/mp4">
+		</video><br><br>
 	<strong>Real circuit</strong> (I add a bunch of photos of the process)<br><br>
-	<img src="c1.png" alt="c1" style="width:45%"> <img src="c2.png" alt="c2" style="width:45%">
-	<video heigth="100%" controls>
- 	 <source src="v1.mov" type="video/mp4">
-	</video>
-	<img src="c3.png" alt="c3" style="width:45%"> <img src="c4.png" alt="c4" style="width:45%">
-	<img src="c5.png" alt="c5" style="width:45%"> <img src="c6.png" alt="c6" style="width:45%">
-	<img src="c7.png" alt="c7" style="width:45%">
+		<img src="c1.png" alt="c1" style="width:45%"> <img src="c2.png" alt="c2" style="width:45%">
+		<video heigth="100%" controls>
+ 			 <source src="v1.mov" type="video/mp4">
+		</video>
+		<img src="c3.png" alt="c3" style="width:45%"> <img src="c4.png" alt="c4" style="width:45%">
+		<img src="c5.png" alt="c5" style="width:45%"> <img src="c6.png" alt="c6" style="width:45%">
+		<img src="c7.png" alt="c7" style="width:45%"><br><br>
+	<strong>Multimeter:</strong> Finally, I used the multimeter to measure the voltage in the circuit. In connection with the board, I got 5.5V. Then in the potentiometer, I got 5.38V in the first leg, 3.01V in the middle one, and 0V in the last one. Sadly my multimeter decided not to work anymore, but I connect a wire to use the analog read. To get the measure in voltage, I divided by the power that the board provides, I learned it in the <a href="https://www.arduino.cc/en/Tutorial/ReadAnalogVoltage"><strong>Arduino website.</strong></a> It was confusing for me that the multimeter gave me values bigger than the power supply, so I believe it is a mistake. <br>
+
+	<strong>The code:</strong> <br>
+		<img src="anvcode.png" alt="code" style="width: 45%"><br>
+	<strong>Potenciometer:</strong> 5V, 3.36V, 0V
+	<strong>Motor:</strong> 4.49V
+	<strong>Resistor:</strong> 3.37V (nearest to the potenciometer), 2,71V (the other side)
+	<strong>Led:</strong> 2.70V, 0.4(cathode)
 	</p>
 </body>
 </html>
