--- a/assignments.html
+++ b/assignments.html
@@ -12,28 +12,28 @@ p.big {
 	<nav>
 	<div class="topnav">
 		<ul>
-			<li><a class="active" href="index.html">Home</a></li>
-			<li><a class="active" href="about-me.html">About me</a></li>
-			<li><a class="active" href="Final_projects.html">Final Project</a></li>
-			<li><a class="active" href="assignments.html">Assignments</a></li>
+			<li><a class="active" href="../index.html">Home</a></li>
+			<li><a class="active" href="../About-me/about-me.html">About me</a></li>
+			<li><a class="active" href="../Final-project/Final_projects.html">Final Project</a></li>
+			<li><a class="active" href="../assignments.html">Assignments</a></li>
 		</ul>
 	</div>	
 </nav>
 <table style= "width:100%">
 	<tr>
-    <th class="asb"><a class="active" href="class1/class1.html">Class 1</a></th>
-    <th class="asb"><a class="active" href="class2/class2.html">Class 2</a></th>
-    <th class="asb"><a class="active" href="class3/class3.html">Class 3</a></th>
+   		 <th class="asb"><a class="active" href="class1/class1.html">Class 1</a></th>
+    	<th class="asb"><a class="active" href="class2/class2.html">Class 2</a></th>
+   		 <th class="asb"><a class="active" href="class3/class3.html">Class 3</a></th>
     <tr>
-    	</tr>
-    <th class="asb"><a class="active" href="">Class 4</a></th>
-    <th class="asb"><a class="active" href="">Class 5</a></th>
-    <th class="asb"><a class="active" href="">Class 6</a></th>
+    </tr>
+   		 <th class="asb"><a class="active" href="class4/class4.html">Class 4</a></th>
+    	<th class="asb"><a class="active" href="">Class 5</a></th>
+    	<th class="asb"><a class="active" href="">Class 6</a></th>
     </tr>
     <tr>
-    <th class="asb"><a class="active" href="">Class 7</a></th>
-    <th class="asb"><a class="active" href="">Class 8</a></th>
-    <th class="asb"><a class="active" href="">Class 9</a></th>
+    	<th class="asb"><a class="active" href="">Class 7</a></th>
+    	<th class="asb"><a class="active" href="">Class 8</a></th>
+   		 <th class="asb"><a class="active" href="">Class 9</a></th>
     </tr>
     <tr>
     <th class="asb"><a class="active" href="">Class 10</a></th>
