--- a/class1/class1.html
+++ b/class1/class1.html
@@ -6,17 +6,36 @@
 <body>
 <nav>
 	<div class="topnav">
-		<ul>
-			<li><a class="active" href="../index.html">Home</a></li>
-			<li><a class="active" href="../About-me/about-me.html">About me</a></li>
-			<li><a class="active" href="../Final-project/Final_projects.html">Final Project</a></li>
-			<li><a class="active" href="../assignments.html">Assignments</a></li>
-		</ul>
+			<a class="active" href="../index.html">Home</a>
+			<a class="active" href="../About-me/about-me.html">About me</a>
+			<a class="active" href="../Final-project/Final_projects.html">Final Project</a>
+			<div class="dropdown">
+    <button class="dropbtn" href="../assignments.html">Assignments
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+     <a href="../class1/class1.html">Class 1</a>
+      <a href="../class2/class2.html">Class 2</a>
+      <a href="../class3/class3.html">Class 3</a>
+      <a href="../class4/class4.html">Class 4</a>
+      <a href="#">Class 5</a>
+      <a href="#">Class 6</a>
+      <a href="#">Class 7</a>
+      <a href="#">Class 8</a>
+      <a href="#">Class 9</a>
+      <a href="#">Class 10</a>
+      <a href="#">Class 11</a>
+      <a href="#">Class 12</a>
+    </div>
+  </div>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>	
 </nav>
 <h1>Project idea</h1>
 <div class="paragraph">
 <p><strong>Plan:</strong><br> Personal Assistant -> A small robot that could do simple tasks such as: turn off the tv, turn on the lights, see if the cats have food, find small things, etc.
+	<strong>Coding the website</strong><br> 
+
 </p>
 </div>
 
