--- a/class4/class4.html
+++ b/class4/class4.html
@@ -42,20 +42,22 @@ I wanted to do this as accurately as possible. Obviously, the way that I will pr
 <img src="GIMP-2.png" alt="GIMP-2" style="width: 45%"> <img src="Inkscape-cat.png" alt="Inkscape" style="width: 45%"><br>
 <img src="fusion-cat.png" alt="fusion-cat" style="width: 45%"><br><br>
 <strong>As for how I did it:</strong> <br>
-First, I printed out the cat and mutilated him to separate the body from the mobile arm. Then I use it as a pattern to cut the cardboard. I create an approximate base and top for the cat, as you can see en the photos. After I cut everything and glue the top and bottom to one side of the cat and ask for help, this weekend, my little sister was working on a solar system model, so while she was painting the planets, she also painted my cat. As an exchange, I build a small circuit to make the planets move. Before moving into the circuit itself, I wanted to create the inside of the arm for that I make holes in a wood stick with a screw.<br><br>
+    First, I printed out the cat and mutilated him to separate the body from the mobile arm. Then I use it as a pattern to cut the cardboard. I create an approximate base and top for the cat, as you can see en the photos. After I cut everything and glue the top and bottom to one side of the cat and ask for help, this weekend, my little sister was working on a solar system model, so while she was painting the planets, she also painted my cat. As an exchange, I build a small circuit to make the planets move. Before moving into the circuit itself, I wanted to create the inside of the arm for that I make holes in a wood stick with a screw.<br><br>
 <img src="cat1.png" alt="cat" style="width: 45%"> <img src="pattern.png" alt="carboard-cat" style="width: 45%"><br>
 <img src="gluecat.png" alt="glue cat" style="width: 45%"> <img src="pcat.png" alt="painted cat" style="width: 45%"><br>
 <img src="armb.png" alt="arm base" style="width: 45%"><br><br>
-In the beginning, I wanted to use de canon motor; then, I realize it was too heavy for my project, so I change to n20. I used de h bridge to control the motor, and I use a second breadboard just to create high for the led which would act as eyes. My first plan was to connect the led with resistors, and it actually works pretty well. However, I wanted to have individual control of each light for why I connect them directly to a pin. <br><br>
+    In the beginning, I wanted to use de canon motor; then, I realize it was too heavy for my project, so I change to n20. I used de h bridge to control the motor, and I use a second breadboard just to create high for the led which would act as eyes. My first plan was to connect the led with resistors, and it actually works pretty well. However, I wanted to have individual control of each light for why I connect them directly to a pin. <br><br>
 <img src="ci1.png" alt="first circuit" style="width: 45%"> <img src="oc.png" alt="original circuit" style="width: 45%"><br><br>
-For the code, I used different ”void” to keep it as organized as possible. After some try and error with the motor, I realize I put the wires in the wrong place, so left was right, right was left, and low was high. For convince, I just keep it that way because I had already glue the controller and motor. <br><br>
-
-Now was the complicated part -the arm. I end up doing it by eye because my measurement didn't work at all. I adapt the ends of the cardboard to fit inside the body and don't crash with other parts. To keep the arm in place, I added hot glue to make a tighter the hole. I also glue the motor to the breadboard. After that, I believed everything was fine and dandy when the port problem appears. Because I have a MacBook pro with a thunderbolt, I use an adaptor that works perfectly for everything except the Arduino. So I expend all my afternoon plugin and unplugging trying to get the board recognized. I ended up getting a connection this morning, but it's all working now. <br><br>
+    For the code, I used different ”void” to keep it as organized as possible. After some try and error with the motor, I realize I put the wires in the wrong place, so left was right, right was left, and low was high. For convince, I just keep it that way because I had already glue the controller and motor. <br><br>
+<img src="code1.png" alt="first circuit" style="width: 45%"> <img src="code2.png" alt="original circuit" style="width: 45%"><br><br>
+    Now was the complicated part -the arm. I end up doing it by eye because my measurement didn't work at all. I adapt the ends of the cardboard to fit inside the body and don't crash with other parts. To keep the arm in place, I added hot glue to make a tighter the hole. I also glue the motor to the breadboard. After that, I believed everything was fine and dandy when the port problem appears. Because I have a MacBook pro with a thunderbolt, I use an adaptor that works perfectly for everything except the Arduino. So I expend all my afternoon plugin and unplugging trying to get the board recognized. I ended up getting a connection this morning, but it's all working now. <br><br>
 <img src="arm1.png" alt="arm side" style="width: 45%"> <img src="arm2.png" alt="arm" style="width: 45%"><br><br>
-Finally, I adjust details glue everything and film some videos.<br><br>
-
+    Finally, I adjust details glue everything and film a video.<br><br>
+    <video heigth="100%" controls>
+       <source src="catwork.mov" type="video/mp4">
+    </video><br><br>
 <strong>Extra</strong><br>
-Finally, this weekend I learned a little bit of JavaScript because I wanted tu build a responsive Navbar dropdown. For that, I end up changing my navbar; you can see the first code in class 1. <br><br>
+    Finally, this weekend I learned a little bit of JavaScript because I wanted tu build a responsive Navbar dropdown. For that, I end up changing my navbar; you can see the first code in class 1. <br><br>
 <img src="nnavbar.png" alt="new navbar" style="width: 45%"> <img src="jsnavbar.png" alt="fusion-cat" style="width: 45%"><br>
 </p>
 </div>
