--- a/class1/class1.html
+++ b/class1/class1.html
@@ -33,8 +33,13 @@
 </nav>
 <h1>Project idea</h1>
 <div class="paragraph">
-<p><strong>Plan:</strong><br> Personal Assistant -> A small robot that could do simple tasks such as: turn off the tv, turn on the lights, see if the cats have food, find small things, etc.
-	<strong>Coding the website</strong><br> 
+<p><strong>Plan:</strong><br> Personal Assistant -> A small robot that could do simple tasks such as: turn off the tv, turn on the lights, see if the cats have food, find small things, etc.<br>
+	<strong>Coding the website</strong><br> I'm part of the robotics team at my school, and I was part of the University of Chile before the cancellation of it. There was my beginning in robotics and coding. First, I worked with Arduino language, then I participated in FLL, so I learned the lego language, but in the same competition, we used Python for our project, and I learn a little bit about it. After that, I enjoyed programming Python and started learned by myself. Therefore I have a background in coding, yet I never really learn HTML, CSS, or JavaScript. My best friend used it last year when we participated in a math competition, but I never paid attention to it.  <br>
+
+With that background, I still have problems at the beginning getting the idea of the code. After I understand the base, you now these things ”<>” it was much easier to build the HTML. On the other side, CSS was much more relaxed; it just declared for what it is and what you want. The thing is I know that I'm probably doing some things most inefficiently. One example is how I centered the div in the index, but I'm working on it. <br>
+
+I also wanted to make it aesthetic but useful, for that reason, I created the navbar; again, this is not ready because I want to do this kind of menu that comes out when you touch the assignment tab. Although everything is working and I  know I can make it much better. <br><br>
+<img src="onavbar.png" alt="original navbar" style="width:45%"> <img src="index.png" alt="index" style="width:45%">
 
 </p>
 </div>
