--- a/class4/class4.html
+++ b/class4/class4.html
@@ -3,6 +3,11 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="../mystyle.css">
 	<script src="script.js"></script>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/arduino-light.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/arduino.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+
 </head>
 <body>
 <nav>
@@ -48,8 +53,75 @@ I wanted to do this as accurately as possible. Obviously, the way that I will pr
 <img src="armb.png" alt="arm base" style="width: 45%"><br><br>
     In the beginning, I wanted to use de canon motor; then, I realize it was too heavy for my project, so I change to n20. I used de h bridge to control the motor, and I use a second breadboard just to create high for the led which would act as eyes. My first plan was to connect the led with resistors, and it actually works pretty well. However, I wanted to have individual control of each light for why I connect them directly to a pin. <br><br>
 <img src="ci1.png" alt="first circuit" style="width: 45%"> <img src="oc.png" alt="original circuit" style="width: 45%"><br><br>
-    For the code, I used different ”void” to keep it as organized as possible. After some try and error with the motor, I realize I put the wires in the wrong place, so left was right, right was left, and low was high. For convince, I just keep it that way because I had already glue the controller and motor. <br><br>
-<img src="code1.png" alt="first circuit" style="width: 45%"> <img src="code2.png" alt="original circuit" style="width: 45%"><br><br>
+    For the code, I used different ”void” to keep it as organized as possible. After some try and error with the motor, I realize I put the wires in the wrong place, so left was right, right was left, and low was high. For convince, I just keep it that way because I had already glue the controller and motor. <br></p>
+ <pre><code class="language-arduino">
+const int A1A = 3;  // define pin 3 for A-1A
+const int A1B = 4;  // define pin 4 for A-1B
+int led1 = 10; // define pin 10 for right led
+int led2 = 11; // define pin 11 for left led
+
+void setup() {
+  pinMode(A1A, OUTPUT); // specify these pins as outputs
+  pinMode(A1B, OUTPUT);    
+  pinMode(led1, OUTPUT);
+  pinMode(led2, OUTPUT);
+}
+
+
+void loop() {
+  ledcontrolb('U', 1000);
+  ledcontrolb('D', 1000);
+  delay(100);
+  ledcontrols('O', 1000);
+  delay(100);
+  ledcontrols('W', 1000);
+ ledcontrolb('D', 1000);
+  motorA('R', 100);   // turn left for 2 seconds
+  delay(2000);      // delay for 1.5 second
+  motorA('L', 100);  // turn right for 1 seconds
+  delay(2000);      // delay for 1.5 second
+}
+
+
+void motorA(char d, int t) {
+  if(d =='R'){
+    digitalWrite(A1A, LOW);
+    digitalWrite(A1B, HIGH); 
+  } else if (d =='L'){
+    digitalWrite(A1A, HIGH);
+    digitalWrite(A1B, LOW);    
+  }
+
+  delay(t); // allow motor to run for specified time
+ 
+  digitalWrite(A1A, LOW);  // turn motor OFF
+  digitalWrite(A1B, LOW);    
+}
+
+void ledcontrolb(char l, int t) { //both led up at the same time
+  if(l == 'U'){
+   digitalWrite(led1, HIGH);
+   digitalWrite(led2, HIGH);
+  }
+  else if (l == 'D'){
+    digitalWrite(led1, LOW);
+     digitalWrite(led2, LOW);
+  }
+  delay(t);
+}
+void ledcontrols(char e, int t) {
+    if(e == 'O'){ // led1 up first
+      digitalWrite(led1, HIGH);
+      digitalWrite(led2, LOW);
+    }
+    else if (e =='W') { // led2 up first
+     digitalWrite(led1, LOW);
+     digitalWrite(led2, HIGH);
+    }
+  delay(t);
+  }</code></pre>
+   
+  <p>
     Now was the complicated part -the arm. I end up doing it by eye because my measurement didn't work at all. I adapt the ends of the cardboard to fit inside the body and don't crash with other parts. To keep the arm in place, I added hot glue to make a tighter the hole. I also glue the motor to the breadboard. After that, I believed everything was fine and dandy when the port problem appears. Because I have a MacBook pro with a thunderbolt, I use an adaptor that works perfectly for everything except the Arduino. So I expend all my afternoon plugin and unplugging trying to get the board recognized. I ended up getting a connection this morning, but it's all working now. <br><br>
 <img src="arm1.png" alt="arm side" style="width: 45%"> <img src="arm2.png" alt="arm" style="width: 45%"><br><br>
     Finally, I adjust details glue everything and film a video.<br><br>
