--- a/class1/class1.html
+++ b/class1/class1.html
@@ -18,7 +18,7 @@
       <a href="../class2/class2.html">Class 2</a>
       <a href="../class3/class3.html">Class 3</a>
       <a href="../class4/class4.html">Class 4</a>
-      <a href="#">Class 5</a>
+      <a href="../class5/class5.html">Class 5</a>
       <a href="#">Class 6</a>
       <a href="#">Class 7</a>
       <a href="#">Class 8</a>
