--- a/class3/class3.html
+++ b/class3/class3.html
@@ -17,12 +17,12 @@
     <button class="dropbtn" href="../assignments.html">Assignments
       <i class="fa fa-caret-down"></i>
     </button>
-    <div class="dropdown-content">
-      <a href="../class1/class1.html">Class 1</a>
+       <div class="dropdown-content">
+     <a href="../class1/class1.html">Class 1</a>
       <a href="../class2/class2.html">Class 2</a>
       <a href="../class3/class3.html">Class 3</a>
       <a href="../class4/class4.html">Class 4</a>
-      <a href="#">Class 5</a>
+      <a href="../class5/class5.html">Class 5</a>
       <a href="#">Class 6</a>
       <a href="#">Class 7</a>
       <a href="#">Class 8</a>
@@ -53,7 +53,7 @@
 		<img src="c3.png" alt="c3" style="width:45%"> <img src="c4.png" alt="c4" style="width:45%">
 		<img src="c5.png" alt="c5" style="width:45%"> <img src="c6.png" alt="c6" style="width:45%">
 		<img src="c7.png" alt="c7" style="width:45%"><br><br>
-	<strong>Multimeter:</strong> Finally, I used the multimeter to measure the voltage in the circuit. In connection with the board, I got 5.5V. Then in the potentiometer, I got 5.38V in the first leg, 3.01V in the middle one, and 0V in the last one. Sadly my multimeter decided not to work anymore, but I connect a wire to use the analog read. To get the measure in voltage, I divided by the power that the board provides, I learned it in the <a href="https://www.arduino.cc/en/Tutorial/ReadAnalogVoltage"><strong>Arduino website.</strong></a> It was confusing for me that the multimeter gave me values bigger than the power supply, so I believe it is a mistake. <br>
+	<strong>Multimeter:</strong> Finally, I used the multimeter to measure the voltage in the circuit. In connection with the board, I got 5.5V. Then in the potentiometer, I got 5.38V in the first leg, 3.01V in the middle one, and 0V in the last one. Sadly my multimeter decided not to work anymore, but I connect a wire to use the analog read. To get the measure in voltage, I divided by the power that the board provides, I learned it in the <a href="https://www.arduino.cc/en/Tutorial/ReadAnalogVoltage"><strong>Arduino website.</strong></a> It was confusing for me that the multimeter gave me values bigger than the power supply, so I believe it is a mistake. <br><br>
 
 	<strong>The code:</strong> <br> </p>
 		<pre><code class="language-arduino">
