--- a/class4/class4.html
+++ b/class4/class4.html
@@ -19,12 +19,12 @@
     <button class="dropbtn" href="../assignments.html">Assignments
       <i class="fa fa-caret-down"></i>
     </button>
-    <div class="dropdown-content">
+      <div class="dropdown-content">
      <a href="../class1/class1.html">Class 1</a>
       <a href="../class2/class2.html">Class 2</a>
       <a href="../class3/class3.html">Class 3</a>
       <a href="../class4/class4.html">Class 4</a>
-      <a href="#">Class 5</a>
+      <a href="../class5/class5.html">Class 5</a>
       <a href="#">Class 6</a>
       <a href="#">Class 7</a>
       <a href="#">Class 8</a>
@@ -47,7 +47,7 @@ I wanted to do this as accurately as possible. Obviously, the way that I will pr
 <img src="GIMP-2.png" alt="GIMP-2" style="width: 45%"> <img src="Inkscape-cat.png" alt="Inkscape" style="width: 45%"><br>
 <img src="fusion-cat.png" alt="fusion-cat" style="width: 45%"><br><br>
 <strong>As for how I did it:</strong> <br>
-    First, I printed out the cat and mutilated him to separate the body from the mobile arm. Then I use it as a pattern to cut the cardboard. I create an approximate base and top for the cat, as you can see en the photos. After I cut everything and glue the top and bottom to one side of the cat and ask for help, this weekend, my little sister was working on a solar system model, so while she was painting the planets, she also painted my cat. As an exchange, I build a small circuit to make the planets move. Before moving into the circuit itself, I wanted to create the inside of the arm for that I make holes in a wood stick with a screw.<br><br>
+    First, I printed out the cat and mutilated him to separate the body from the mobile arm. Then I use it as a pattern to cut the cardboard. I create an approximate base and top for the cat, as you can see en the photos. After I cut everything and glue the top and bottom to one side of the cat and painted it. Before moving into the circuit itself, I wanted to create the inside of the arm for that I make holes in a wood stick with a screw.<br><br>
 <img src="cat1.png" alt="cat" style="width: 45%"> <img src="pattern.png" alt="carboard-cat" style="width: 45%"><br>
 <img src="gluecat.png" alt="glue cat" style="width: 45%"> <img src="pcat.png" alt="painted cat" style="width: 45%"><br>
 <img src="armb.png" alt="arm base" style="width: 45%"><br><br>
