--- a/assignments.html
+++ b/assignments.html
@@ -14,16 +14,16 @@ p.big {
 			<a class="active" href="index.html">Home</a>
 			<a class="active" href="About-me/about-me.html">About me</a>
 			<a class="active" href="../Final-project/Final_projects.html">Final Project</a>
-			<div class="dropdown">
+		  <div class="dropdown">
     <button class="dropbtn" href="../assignments.html">Assignments
       <i class="fa fa-caret-down"></i>
     </button>
-    <div class="dropdown-content">
-      <a href="class1/class1.html">Class 1</a>
-      <a href="class2/class2.html">Class 2</a>
-      <a href="class3/class3.html">Class 3</a>
-      <a href="class4/class4.html">Class 4</a>
-      <a href="#">Class 5</a>
+      <div class="dropdown-content">
+     <a href="../class1/class1.html">Class 1</a>
+      <a href="../class2/class2.html">Class 2</a>
+      <a href="../class3/class3.html">Class 3</a>
+      <a href="../class4/class4.html">Class 4</a>
+      <a href="../class5/class5.html">Class 5</a>
       <a href="#">Class 6</a>
       <a href="#">Class 7</a>
       <a href="#">Class 8</a>
