--- a/assignments.html
+++ b/assignments.html
@@ -7,6 +7,7 @@ p.big {
 }
 </style>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
+<link  rel="icon"   href="icon.png" type="image/png" />
 </head>
 <body>
 	<nav>
