--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
+<link  rel="icon"   href="icon.png" type="image/png" />
 </head>
 <body>
 
